# genai_demo_public

./: .coverage  .env.example  .env_template  .gitignore  README.md  execute_workflow.py  pyproject.toml  requirements.json  update_parameters.json
.github/workflows/: demo.yml  extract.yml  install.yml
components/: extract_parameters.py  extract_requirements.py  update_parameters.py  validate_requirements.py
genai_demo/: __init__.py  __main__.py
genai_demo/components/: extract_cad_data.py  extract_parameters.py  extract_requirements.py  update_parameters.py  validate_requirements.py
genai_demo/shared/: debug.py  helpers.py
shared/: constants.py  helpers.py
src/: execute_workflow.py
src/components/: extract_cad_data.py  extract_parameters.py  extract_requirements.py  update_parameters.py  validate_requirements.py
src/shared/: constants.py  helpers.py
tests/: test_extract_parameters.py  test_extract_requirements.py  test_helpers.py  test_main.py  test_update_parameters.py  test_validate_requirements.py
