[tool.poetry]
name = "genai_demo"
version = "1.0.0"
description = "Demonstration workflow for Lockheed generative AI"
authors = ["Gerhard Stoeckel <171275975+gerhard-istari@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pydantic = "^2.7.0"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
argparse = "^1.4.0"
prettytable = "=3.16.0"
dotenv = "=0.9.9"
istari-digital-client = "7.3.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
autoflake = "^2.3.1"
mypy = "^1.10.0"
isort = "^5.13.2"
poethepoet = "^0.26.1"

[[tool.poetry.source]]
name = "istari"
url = "https://automation.cs@istaridigital.com:cmVmdGtuOjAxOjE3NTk4NTc5ODA6UEYxS2hRZWMzRmRoRlBXOUE4cVhtelFLdE1N@istaridigital.jfrog.io/artifactory/api/pypi/main-pypi-local/simple"
priority = "explicit"

[tool.mypy]
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
implicit_reexport = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
exclude = ["tests/", "venv/"]
